# flask-api-sqlite-db

./: README.md  flask_test.py  mock_up_data.sql  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: .devcontainer.json  Dockerfile_dev  devcontainer.json  docker-compose_dev.yml
.github/workflows/: devcontaienr-ci.yml  format.yml  tests.yml
src/: app.py  entrypoint.sh  pyproject.toml  requirements.txt
src/config/: development.py
src/database/: models.py  testdb.db
src/flaskapp/: __init__.py  app.py
src/flaskapp/config/: development.py
src/flaskapp/database/: models.py  testdb.db
tests/: conftest.py  flask_test.py  test_app.py  test_gunicorn.py
